Aplicando o front do painel de controle de agendamento
Foi aplicado efeitos co o JQuery

--- a/fomulario/contAgend.html/painelAgend.html
+++ b/fomulario/contAgend.html/painelAgend.html
@@ -38,7 +38,7 @@
     </section><!-- Section - Banner -->
     <section class="button-list">
         <div class="center">
-            <div class="btn-list">
+            <div class="btn-list por_agendar">
                 <div class="btn-wraper-center">
                     <div class="cont">
                         <p>5</p>
@@ -49,7 +49,52 @@
                     </div><!-- BTN - Wraper -->
                 </div><!-- Btn-Wraper-Center -->
 
-                <div class="list-nomes">
+                <div class="list-nomes anm1">
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
+                    <div class="name-date">
+                        <h4>Valdean Palmeira de Souza</h4>
+                        <p>07/02/2020 4:53:52</p>
+                    </div>
+
                     <div class="name-date">
                         <h4>Valdean Palmeira de Souza</h4>
                         <p>07/02/2020 4:53:52</p>
@@ -82,7 +127,7 @@
                 </div><!-- list-nomes -->
             </div><!-- Btn-List -->
 
-            <div class="btn-list">
+            <div class="btn-list agendado">
                 <div class="btn-wraper-center">
                     <div class="cont">
                         <p>5</p>
@@ -93,7 +138,7 @@
                     </div><!-- BTN - Wraper -->
                 </div><!-- Btn-Wraper-Center -->
 
-                <div class="list-nomes">
+                <div class="list-nomes anm2">
                     <div class="name-date">
                         <h4>Valdean Palmeira de Souza</h4>
                         <p>07/02/2020 4:53:52</p>
@@ -127,5 +172,10 @@
             </div><!-- Btn-List -->
         </div><!-- Center -->
     </section><!-- Section - Button-List -->
+
+
+    <!-- JavaScript - JQuery -->
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/animacoes.js"></script>
 </body>
 </html>
